# orb-firmware

./: .clang-format  .clang-tidy  .clangd  .envrc.example  .gdbinit  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mxproject  AGENT.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Kconfig  Makefile  README.md  VERSION  codex.md  firmware.ioc  prj.conf  west.yml
app_main/: CMakeLists.txt  README.md
app_main/.github/workflows/: docker_build.yml  main.yml
app_main/src/: main.c
app_main/src/messaging/: canbus.h  messaging.c  messaging_tests.c
app_main/src/sound/: sound.c
app_main/utils/debug/: uart_mcu_messaging.py
app_main/utils/env/: environment.yml
app_main/utils/version/: gen_version_bl.py
lib/: CMakeLists.txt  Kconfig
lib/can_mcu_message/: CMakeLists.txt  Kconfig  can_messaging.c  canbus_rx.c  canbus_rx.h  canbus_rx_isotp.c  canbus_tx.c  canbus_tx.h  canbus_tx_isotp.c
lib/can_mcu_message/include/: can_messaging.h
lib/can_messaging/: CMakeLists.txt  Kconfig  can_messaging.c  canbus_rx.c  canbus_rx.h  canbus_rx_isotp.c  canbus_tx.c  canbus_tx.h  canbus_tx_isotp.c  log_levels.Kconfig
lib/can_messaging/include/: can_messaging.h
lib/date/: CMakeLists.txt  Kconfig  date.c  log_levels.Kconfig
lib/date/include/: date.h
lib/dfu/: CMakeLists.txt  Kconfig  dfu.c  flash_map_extended.c  log_levels.Kconfig
lib/dfu/include/: dfu.h
lib/errors/: CMakeLists.txt  Kconfig  app_assert.c  errors_tests.c  fatal.c  log_levels.Kconfig  orb_errors.c  orb_fatal.c
lib/errors/include/: app_assert.h  errors.h  fatal.h  orb_fatal.h
lib/health_monitoring/: CMakeLists.txt  Kconfig  heartbeat.c  heartbeat_test.c  log_levels.Kconfig  mcu_ping.c  orb_state.c
lib/health_monitoring/include/: heartbeat.h  mcu_ping.h  orb_state.h
lib/i2c_scan/: CMakeLists.txt  Kconfig  i2c_scan.c  log_levels.Kconfig
lib/i2c_scan/include/: i2c_scan.h
lib/include/: compilers.h  errors.h  mcu_message_wrapper.h  orb_logs.h  utils.h
lib/log_backend_can/: CMakeLists.txt  Kconfig  log_backend_can.c  log_levels.Kconfig
lib/log_backend_can/include/: log_backend_can.h
lib/logs_can/: CMakeLists.txt  Kconfig  log_backend_can.c  log_levels.Kconfig  logs_can.c
lib/logs_can/include/: log_backend_can.h  logs_can.h
lib/storage/: CMakeLists.txt  Kconfig  backup_regs.c  log_levels.Kconfig  storage.c  storage_tests.c
lib/storage/include/: storage.h  storage_tests.h
lib/uart_messaging/: CMakeLists.txt  Kconfig  log_levels.Kconfig  uart_messaging.c
lib/uart_messaging/include/: uart_messaging.h
lib/watchdog/: CMakeLists.txt  Kconfig  log_levels.Kconfig  watchdog.c
lib/watchdog/include/: watchdog.h
main_board/: .clangd  CMakeLists.txt  Kconfig  README.md  cone.overlay  debug.conf  debug_uart_dts.overlay  log_levels.Kconfig  prj.conf  release.conf  service.conf  testcase.yaml  tests.conf
main_board/app/: CMakeLists.txt  Kconfig  README.md  VERSION  debug.conf  log_levels.Kconfig  prj.conf  release.conf  testcase.yaml  tests.conf
main_board/app/boards/: diamond_main.conf  pearl_main.conf
main_board/app/include/: app_config.h
main_board/app/src/: main.c
main_board/app/src/1d_tof/: tof_1d.c  tof_1d.h
main_board/app/src/ambient_light/: als.c  als.h
main_board/app/src/battery/: battery.c
main_board/app/src/button/: button.c  button.h
main_board/app/src/dfu/: dfu.c  dfu.h  dfu_tests.c  dfu_tests.h  flash_map_extended.c  tests.c  tests.h
main_board/app/src/distributor_leds/: distributor_leds.c  distributor_leds.h  distributor_leds_tests.c  distributor_leds_tests.h
main_board/app/src/fan/: fan.c  fan.h  fan_tach.c  fan_tests.c
main_board/app/src/front_unit_rgb_leds/: front_unit_led_patterns.c  front_unit_led_patterns.h  front_unit_rgb_leds.c  front_unit_rgb_leds.h  front_unit_rgb_leds_tests.c  front_unit_rgb_leds_tests.h
main_board/app/src/gnss/: gnss.c  gnss.h
main_board/app/src/ir_camera_system/: ir_camera_system.c  ir_camera_system.h  ir_camera_system_test.c  ir_camera_system_test.h  ir_camera_system_tests.c  ir_camera_system_tests.h  ir_camera_system_v30.c  ir_camera_system_v31.c  ir_camera_timer_settings.c  ir_camera_timer_settings.h
main_board/app/src/liquid_lens/: liquid_lens.c  liquid_lens.h
main_board/app/src/messaging/: canbus.c  incoming_message_handling.c  incoming_message_handling.h  messaging.c  messaging_tests.c  messaging_tests.h
main_board/app/src/optics/: optics.c  optics.h
main_board/app/src/power_sequence/: power_sequence.c  power_sequence.h
main_board/app/src/pubsub/: pubsub.c  pubsub.h  pubsub_tests.c
main_board/app/src/runner/: runner.c  runner.h
main_board/app/src/sound/: sound.c  sound.h
main_board/app/src/stepper_motors/: motors_tests.c  motors_tests.h  stepper_motors.c  stepper_motors.h
main_board/app/src/stm32_timer_utils/: stm32_timer_utils.h
main_board/app/src/system/: diag.c  diag.h  fatal.c  logs.c  logs.h
main_board/app/src/temperature/: temperature.c  temperature.h
main_board/app/src/ui/: rgb_leds.c  rgb_leds.h  ui.c  ui.h
main_board/app/src/version/: version.c  version.h
main_board/app/src/voltage_measurement/: README.md  voltage_measurement.c  voltage_measurement.h
main_board/app/tests/: README.md
main_board/boards/: diamond_main.conf  pearl_main.conf
main_board/config/: compact-logs.ld  memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_reboot_reason_user_config.def  memfault_trace_reason_user_config.def  orb-states.ld
main_board/include/: app_config.h
main_board/src/: main.c
main_board/src/cli/: cli.c  cli.h
main_board/src/gnss/: gnss.c  gnss.h
main_board/src/motion/: motion.c  motion.h
main_board/src/optics/: optics.c  optics.h
main_board/src/pubsub/: pubsub.c  pubsub.h  pubsub_tests.c
main_board/src/runner/: runner.c  runner.h
main_board/src/system/: app_watchdog.c  app_watchdog.h  backup_regs.h  diag.c  diag.h  logs.c  logs.h  metrics.c  ping_sec.c  ping_sec.h  tracing_user.c
main_board/src/ui/: ui.c  ui.h
main_board/src/ui/nfc/: nfc.c  (+4 more)
main_board/src/voltage_measurement/: voltage_measurement.c  voltage_measurement.h  voltage_measurement_tests.c
(+942 files in other folders)
